<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/successFragment"
        android:name="com.assignment.weatherapp.presentation.SuccessFragment"
        android:label="@string/succeen_screen"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/errorFragment"
        android:name="com.assignment.weatherapp.presentation.ErrorFragment"
        android:label="@string/error_screen"
        tools:layout="@layout/fragment_error" />
    <fragment
        android:id="@+id/homeFragment"
        android:name="com.assignment.weatherapp.presentation.HomeFragment"
        android:label="@string/home_screen"
        tools:layout="@layout/fragment_success" >
        <action
            android:id="@+id/action_homeFragment_to_errorFragment"
            app:destination="@id/errorFragment" />
        <action
            android:id="@+id/action_homeFragment_to_successFragment"
            app:destination="@id/successFragment" />
    </fragment>
</navigation>